--- a/src/Integration.Vsix/packages.Integration_2017.Vsix.config
+++ b/src/Integration.Vsix/packages.Integration_2017.Vsix.config
@@ -2,23 +2,25 @@
 <packages>
   <package id="EnvDTE" version="8.0.1" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.1" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis" version="1.3.2" targetFramework="net46" />
+  <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.3.2" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.3.2" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.3.2" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Elfie" version="0.10.6" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.25726-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="15.0.25726-Preview5" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.LanguageServices" version="1.3.2" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.LanguageServices" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="15.0.25414-Preview5" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.25726-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="15.0.25413-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="15.0.25413-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="15.0.25413-Preview5" targetFramework="net46" />
@@ -49,6 +51,7 @@
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
   <package id="System.IO" version="4.3.0" targetFramework="net46" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Linq" version="4.3.0" targetFramework="net46" />
@@ -74,6 +77,7 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net46" />
