--- a/src/ProgressVS/packages.ProgressVS_2017.config
+++ b/src/ProgressVS/packages.ProgressVS_2017.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.25726-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="15.0.25414-Preview5" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.25726-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="15.0.25413-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="15.0.25413-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="15.0.25413-Preview5" targetFramework="net46" />
