--- a/src/TestInfrastructure/packages.TestInfrastructure_2017.config
+++ b/src/TestInfrastructure/packages.TestInfrastructure_2017.config
@@ -4,20 +4,22 @@
   <package id="EnvDTE" version="8.0.1" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.1" targetFramework="net46" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
+  <package id="ManagedEsent" version="1.9.4" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.0.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Elfie" version="0.10.6" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.25726-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="15.0.25726-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="15.0.25414-Preview5" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.25726-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="15.0.25413-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="15.0.25413-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="15.0.25413-Preview5" targetFramework="net46" />
@@ -52,6 +54,7 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net46" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net46" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Linq" version="4.3.0" targetFramework="net46" />
@@ -76,6 +79,7 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net46" />
